# neural-plato

./: .gitignore  Cargo.toml  README.md
examples/: basic.f90
experiments/: FALSIFICATION-REPORT.md  GROUND-TRUTH-AUDIT.md  GROUND-TRUTH-FINAL.md  LEARNED-PROJECTION-RESULTS.md  SEED-PHASE2-REPORT.md  falsification_results.json  falsification_suite.py  learned_projection.py  nasty_capacity.py  nasty_capacity_results.txt  penrose_property_verification.py  seed_phase2_results.json  seed_questions.py
fortran/: Makefile  amnesia_curve.f90  intent_snap.f90  negative_space.f90  neural_plato.f90  sparse_memory.f90  tucker_decompose.f90
src/: cut_and_project.rs  dream_backend.rs  lib.rs  nasty_compress.rs  penrose_bit.rs  penrose_floor.rs  penrose_palace.rs  sparse_memory.rs
